storage-service/k8/deployment.yml
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  labels:
    app: storage-service
  name: storage-service-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      app: storage-service
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: storage-service
    spec:
      affinity: {}
      containers:
      - command:
        - /opt/service/bin/service
        - --config-dir
        - /etc/psql
        - --config-dir
        - /etc/service-config
        - --config-dir
        - /etc/refresh-token
        - --config-dir
        - /etc/token-validation
        - --config-dir
        - /etc/storage-config
        image: registry.cloud.sdu.dk/sdu-cloud/storage-service:3.1.4
        livenessProbe:
          httpGet:
            port: 8080
            path: /status
          initialDelaySeconds: 3
          periodSeconds: 30
          failureThreshold: 5
        imagePullPolicy: IfNotPresent
        name: storage-service-deployment
        volumeMounts:
        - mountPath: /etc/psql
          name: psql-secrets
        - mountPath: /etc/refresh-token
          name: refresh-token
        - mountPath: /mnt/cephfs
          name: cephfs
        - mountPath: /etc/token-validation
          name: token-validation
        - mountPath: /etc/storage-config
          name: storage-config
      volumes:
      - name: psql-secrets
        secret:
          defaultMode: 420
          optional: false
          secretName: storage-psql
      - name: refresh-token
        secret:
          defaultMode: 420
          optional: false
          secretName: storage-refresh-token
      - name: cephfs
        persistentVolumeClaim:
          claimName: cephfs
      - configMap:
          defaultMode: 420
          name: token-validation
        name: token-validation
      - configMap:
          defaultMode: 256
          name: storage-config
          optional: false
        name: storage-config

      imagePullSecrets:
        - name: esci-docker
