storage-service/k8/ingress.yml

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: storage-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: ""
spec:
  rules:
  - host: cloud.sdu.dk
    http:
      paths:
      - path: /api/files
        backend:
          serviceName: storage
          servicePort: 8080

      - path: /api/upload
        backend:
          serviceName: storage
          servicePort: 8080
